--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "gulp-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp"
   },
   "license": "ISC",
   "devDependencies": {
@@ -12,6 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
+    "gulp-cli": "^1.4.0",
     "gulp-csscomb": "^3.0.7",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
@@ -26,6 +28,8 @@
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.1.0",
     "gulp.spritesmith": "^6.2.1",
+    "install": "^0.10.1",
+    "npm": "^5.5.1",
     "wiredep": "^4.0.0"
   }
 }
